Added link to git

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <header>
       <h1 id="city">Toronto</h1>
-      <p>
+      <p class="day">
         <span id="date"> Sunday 8 a.m. </span><br />
         Mostly cloudy
       </p>
@@ -144,10 +144,10 @@
       </div>
     </div>
 
-    <script src="src/weather_app.js"></script>
-    <p>
+    <p class="source-link">
       <a href="https://github.com/Huliana1/my-weather-app">Open-source code</a>
       by Yuliia Istomina
     </p>
+    <script src="src/weather_app.js"></script>
   </body>
 </html>
