Added the weather icon

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </form>
 
     <header>
-      <h1 id="city">Toronto</h1>
+      <h1 id="city">New York</h1>
       <p class="day">
         <span id="date"> Sunday 8 a.m. </span><br />
         Mostly cloudy
@@ -64,7 +64,7 @@
           <a href="#" id="celsius">°C</a> |
           <a href="#" id="fahrenheit">°F</a>
         </span>
-        <i class="fa-solid fa-sun"></i>
+        <img src="" alt="Clear" id="icon" class="float-left" />
       </h2>
     </header>
 
