Added icon and description integration

--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
     </form>
 
     <header>
-      <h1 id="city">New York</h1>
-      <p class="day">
-        <span id="date"> Sunday 8 a.m. </span><br />
-        Mostly cloudy
-      </p>
+      <h1 id="city">Toronto</h1>
+
       <h2>
         <span id="temperature"> 12</span>
+
         <span class="units">
-          <a href="#" id="celsius">°C</a> |
-          <a href="#" id="fahrenheit">°F</a>
+          <a href="#" id="celsius" class="active">°C</a> |
+          <a href="#" id="fahrenheit" class="active">°F</a>
         </span>
-        <img src="" alt="Clear" id="icon" class="float-left" />
+
+        <img src="" id="icon" class="float-left" />
       </h2>
     </header>
-
+    <p class="day">
+      <span id="date"> Sunday 8 a.m. </span><br />
+      <span id="description"> Mostly cloudy</span>
+    </p>
     <table>
       <tr>
         <th class="wind">Wind</th>
