Added wind and humidity integration.

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <th class="humidity">Humidity</th>
       </tr>
       <tr>
-        <td class="kmH">6 km/h</td>
-        <td class="procentage">48%</td>
+        <td class="kmH" id="kmH">6 km/h</td>
+        <td class="procentage" id="percentage">48%</td>
       </tr>
     </table>
 
