--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-3"><bold>Kitchener,ON</bold></div>
-        <div class="col-3">Markham,ON</div>
-        <div class="col-3">Oshawa,ON</div>
-        <div class="col-3">Brampton,ON</div>
+        <div class="col-3"><a href="#" id="kitchener">Kitchener,ON</a></div>
+        <div class="col-3"><a href="#" id="markham">Markham,ON</a></div>
+        <div class="col-3"><a href="#" id="oshawa">Oshawa,ON</a></div>
+        <div class="col-3"><a href="#" id="brampton">Brampton,ON</a></div>
       </div>
     </div>
     <form id="search-form">
