Added functions to ontario cities.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row kitchener">
         <div class="col-3"><a href="#" id="kitchener">Kitchener,ON</a></div>
         <div class="col-3"><a href="#" id="markham">Markham,ON</a></div>
         <div class="col-3"><a href="#" id="oshawa">Oshawa,ON</a></div>
